# tachometer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LESSONSLEARNED.md  README.md  REFS-PUBLIC.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
config/: downstream-repos.toml
config/clockwork/: portfolio-server.toml  portfolio-snapshot.toml
config/tachometer/: profile.toml
docs/: contributor-architecture-blueprint.md
docs/diagrams/: python-classes.puml  python-packages.puml  repo-architecture.drawio  repo-architecture.puml  shell-call-graph.puml  tooling-integrations.puml
examples/doseido/: repo-profile.toml
scripts/: refresh_tachometer_summaries.sh  run_all_tachometer_snapshots.sh  serve_tachometer.sh
src/tachometer/: __init__.py  agent_usage.py  backlog.py  cli.py  manifest.py  model.py  notify.py  profile.py  server.py  stoplight.py
tests/: test_agent_usage.py  test_cli.py  test_manifest.py  test_profile.py  test_server.py
