[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tachometer"
version = "0.1.0"
description = "Shared repo and resource profiling helpers for portfolio repos."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Cason Konzer" },
]
dependencies = [
  "tomli>=2; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black"]

[project.scripts]
tachometer = "tachometer.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
  "E501",
  "B008",
  "SIM108",
]
